@@ -8,6 +8,7 @@ pod_spelling_system:
   stopwords:
     - naturalish
     - splitter
+    - snakeCase
 
 pod_coverage:
   skip: 0
