@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}},
 
 {{$NEXT}}
+  - Added reserved type substitute (gh#4)
 
 0.02      2021-04-18 08:14:48 -0600
   - Arbitrary types can be defined, and by default not types are defined (gh#3)
